# bowling

./: CMakeLists.txt  README.md
include/: bowling.h
src/: bowling.cpp
test/: CMakeLists.txt  bowling_test.cpp
